split ci