@@ -2,6 +2,7 @@
 
 set -x #echo on
 
+# install sbt
 if [ ! -f sbt ];
 then
   curl -s https://raw.githubusercontent.com/paulp/sbt-extras/master/sbt > sbt
@@ -14,6 +15,7 @@ then
   rm -rf scaladex-credentials
 fi
 
+# set bintray credentials
 git clone git@github.com:scalacenter/scaladex-credentials.git
 
 if [ ! -d ~/.bintray ];
@@ -21,11 +23,13 @@ then
   mkdir ~/.bintray
 fi
 
+# to list poms
 if [ ! -f ~/.bintray/.credentials2 ];
 then
   cp scaladex-credentials/search-credentials ~/.bintray/.credentials2
 fi
 
+# to publish sbt plugin
 if [ ! -f ~/.bintray/.credentials ];
 then
   cp scaladex-credentials/sbt-plugin-credentials ~/.bintray/.credentials
@@ -33,28 +37,3 @@ fi
 
 git submodule init
 git submodule update
-
-pushd contrib
-git checkout master
-git pull origin master
-popd
-
-pushd index
-git checkout master
-git pull origin master
-popd
-
-export JVM_OPTS="-Xms1G -Xmx3G -XX:ReservedCodeCacheSize=256m -XX:+TieredCompilation -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
-./sbt -no-colors ";test ;data/run all"
-
-pushd contrib
-git add -A
-git commit -m "`date`"
-git push origin master
-popd
-
-pushd index
-git add -A
-git commit -m "`date`"
-git push origin master
-popd
